fixed display issues on ie and firefox

--- a/src/Code/footer.css
+++ b/src/Code/footer.css
@@ -7,18 +7,19 @@
 	background-color: #00929F;
     font-family:arial;
     clear: both;
-    height: 120px;
+    height: 140px;
     text-align: left;
+	overflow:auto;
 }
 
 .center-div {
 	margin:0 auto;
-	width: 845px;
+	width: 900px;
 }
 
 #footercontainer {
 	background-color: #00929F;
-  padding: 15px;
+	padding: 15px;
 }
 
 .col2 li a {
@@ -46,8 +47,8 @@ ul.col1 {
 	display: inline;
 	list-style-type: none;
 	float: left;
-  line-height: 1.9;
-  color: aqua;
+	line-height: 1.9;
+	color: aqua;
 
 }
 
@@ -69,10 +70,10 @@ ul.col3 {
 }
 ul.col4 {
     display: block;
-	 list-style-type: none;
-	  float: left;
+	list-style-type: none;
     line-height: 1.7;
     color: aqua;
+	float:right;
 }
 
 
